--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,3 +150,7 @@ small {
   font-size: 12px;
   color: var(--color-text-muted);
 }
+
+#SetCard {
+  box-shadow: 7px 7px 5px rgba(0, 0, 0, 0.25);
+}
