--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,10 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  --color-gold: #bd8100;
+  --color-silver: #6a6a6a;
+  --color-bronze: #562a0c;
 }
 
 :root {
